# donotcommit

./: .dockerignore  .env.sample  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  settings.py
src/static/: site.webmanifest
src/static/css/: index.css
src/templates/: index.html
tests/: conftest.py  test_main.py
